# Real_time-_Polygon_Blockchain_Data_Indexer

./: .env  Cargo.toml  README.md  indexer.db  schema.sql
src/: db.rs  main.rs
