[package]
name = "polygon-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
ethers = { version = "2.0", features = ["abigen", "ws", "rustls"] }
rusqlite = { version = "0.30", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
anyhow = "1.0"
structopt = "0.3"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
